# KilnController

./: .gitignore  .gitlab-ci.yml  .last_build_id  LICENSE  api_routes.md  flutter_service_worker.js  index.html  kiln-controller.code-workspace  main.dart.js  manifest.json  readme.md  version.json
.github/workflows/: gh-pages.yml
.gitlab/: dependabot.yml
assets/: NOTICES
client/: README.md  pubspec.yaml
client/android/app/: build.gradle
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: client.dart  consts.dart  home.dart  kiln_colors.dart  login.dart  main.dart
client/lib/views/: chart_view.dart  current_view.dart
client/linux/: CMakeLists.txt  my_application.cc
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/runner/: Runner.rc  main.cpp
client/winuwp/runner_uwp/: CMakeLists.txt  appxmanifest.in
client_2/: .gitignore  README.md  pubspec.yaml
client_2/android/app/: build.gradle
client_2/ios/Runner/: Info.plist
client_2/ios/Runner.xcodeproj/: project.pbxproj
client_2/lib/: main.dart
client_2/lib/models/: epoch_serializer.dart  firing.dart  firing.g.dart  kiln_info.dart  kiln_info.g.dart
client_2/lib/pages/: home.dart  login.dart
client_2/lib/providers/: api_provider.dart  auth_provider.dart  dio_provider.dart  firing_family_provider.dart  (+2 more)
client_2/web/: index.html  manifest.json
server/: .gitignore  Cargo.toml  config.example.toml
server/src/: api.rs  config.rs  db.rs  error.rs  kiln_server.rs  kiln_tools.rs  main.rs  model.rs  request.rs  requests.rs
(+12 files in other folders)
