[package]
name = "server"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
actix-files = "0.5"
actix-web = "3"
actix-cors = "0.5"
serde_json = "1"
serde = "1"
env_logger = "0.9"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
reqwest = "0.11"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]
