[package]
name = "kiln_server"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

[[bin]]
name = "kiln_tools"
path = "src/kiln_tools.rs"

[[bin]]
name = "ucitest"
path = "src/kiln_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
actix-files = "0.6.0-beta.6"
actix-web = "4.0.0-beta.8"
actix-cors = "0.6.0-beta.2"
serde_json = "1.0"
serde = "1.0"
env_logger = "0.9"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.18"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "gzip", "deflate", "cookies"]
